--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+  @apply mr-5 hover:text-gray-900 cursor-pointer bg-orange-400 rounded-md p-1;
+}
